Added Wavegen.pas with initial triange / sawtooth wave

--- a/WaveToolsTesting.lpi
+++ b/WaveToolsTesting.lpi
@@ -98,6 +98,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="wavCalcs"/>
       </Unit>
+      <Unit>
+        <Filename Value="wavegen.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="waveGen"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
