dsp multithread rework

--- a/WaveToolsExamples.lpi
+++ b/WaveToolsExamples.lpi
@@ -64,6 +64,10 @@
         <Filename Value="dspmt.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="dsp/dspthreads.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
