comments and format maxfinder.pas

--- a/WaveToolsExamples.lpi
+++ b/WaveToolsExamples.lpi
@@ -68,6 +68,10 @@
         <Filename Value="dsp/dspthreads.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="dsp/maxfinder.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
