Started gaintable calculation class

--- a/WaveToolsExamples.lpi
+++ b/WaveToolsExamples.lpi
@@ -72,6 +72,10 @@
         <Filename Value="dsp/maxfinder.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="dsp/gaintable.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
